--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://chayanrastogi.github.io/ShowFlix-react",
+  "homepage": "https://chayanrastogi.github.io/showflix-react",
   "name": "bookingsys",
   "version": "0.1.0",
   "private": true,
